Reworked math and implemented as separate module. Reorganized db storage, readded sqlite and added HSQL.