@@ -36,7 +36,6 @@ import me.moros.bending.model.attribute.Modifiable;
 import me.moros.bending.model.collision.Collision;
 import me.moros.bending.model.collision.geometry.Collider;
 import me.moros.bending.model.collision.geometry.Sphere;
-import me.moros.bending.model.math.Vector3d;
 import me.moros.bending.model.predicate.ExpireRemovalPolicy;
 import me.moros.bending.model.predicate.Policies;
 import me.moros.bending.model.predicate.RemovalPolicy;
@@ -49,6 +48,8 @@ import me.moros.bending.util.SoundUtil;
 import me.moros.bending.util.WorldUtil;
 import me.moros.bending.util.collision.CollisionUtil;
 import me.moros.bending.util.material.MaterialUtil;
+import me.moros.math.FastMath;
+import me.moros.math.Vector3d;
 import org.bukkit.block.Block;
 import org.bukkit.entity.Entity;
 import org.checkerframework.checker.nullness.qual.MonotonicNonNull;
@@ -121,11 +122,11 @@ public class AirShield extends AbilityInstance {
   }
 
   private boolean onEntityHit(Entity entity) {
-    Vector3d toEntity = new Vector3d(entity.getLocation()).subtract(center);
+    Vector3d toEntity = Vector3d.from(entity.getLocation()).subtract(center);
     Vector3d normal = toEntity.withY(0).normalize();
     double strength = ((userConfig.radius - toEntity.length()) / userConfig.radius) * userConfig.maxPush;
-    strength = Math.max(0, Math.min(1, strength));
-    EntityUtil.applyVelocity(this, entity, new Vector3d(entity.getVelocity()).add(normal.multiply(strength)));
+    strength = FastMath.clamp(strength, 0, 1);
+    EntityUtil.applyVelocity(this, entity, Vector3d.from(entity.getVelocity()).add(normal.multiply(strength)));
     return false;
   }
 
